# OpenMeshViewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
OpenMeshViewer/: CMakeLists.txt  OpenMeshViewer.cpp
resources/: resources.qrc
resources/Shaders/: basic.frag.glsl  basic.vert.glsl  solid.frag.glsl  solid.vert.glsl
src/: CMakeLists.txt  main.cpp
src/algorithm/: IsotropicRemesher.cpp  IsotropicRemesher.h  MeshUtils.h
src/viewer/: MainWindow.cpp  MainWindow.h  MeshParameterizer.cpp  MeshParameterizer.h  MeshViewerWidget.cpp  MeshViewerWidget.h  OpenMeshViewer.cpp  OpenMeshViewer.h
